corpus/title-pages.txt
=========
Basics + Title Page
========
Title: Fablada
Credit:
     EAFASDfa
     EDFADfffssa

#What
##Gublah
###Dublah
##Gubadub
#Nuthub

-------
(script
(title_page
(k_v_pair (key) (value))
(k_v_pair (key) (value) (value)))
(section1 (sec_heading1)
(section2 (sec_heading2)
(section3 (sec_heading3)))
(section2 (sec_heading2)))
(section1 (sec_heading1)))
=========
Advanced Sectioneering + Title Page
========
Credit: Written by
Author: Stu Maschwitz
Source: Story by KTM
Draft date: 1/20/2012
Contact:
    Next Level Productions
    1588 Mission Dr.
    Solvang, CA 93463

#What
##Gublah
###Dublah
##Gubadub
#Nuthub
###Fslahd
##sslkd
###dada
###sadafa
##safsfda

-------
(script
(title_page
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value) (value) (value)))
(section1 (sec_heading1)
(section2 (sec_heading2)
(section3 (sec_heading3)))
(section2 (sec_heading2)))
(section1 (sec_heading1)
(section3 (sec_heading3))
(section2 (sec_heading2)
(section3 (sec_heading3))
(section3 (sec_heading3)))
(section2 (sec_heading2))))
==================
Ultra Simple + Title Page
==================
Credit: Written by
Author: Stu Maschwitz
Source: Story by KTM
Draft date: 1/20/2012
Contact:
    Next Level Productions
    1588 Mission Dr.
    Solvang, CA 93463

#Blahlah
##Bladkl

--------------
(script
(title_page
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value))
(k_v_pair (key) (value) (value) (value)))
(section1 (sec_heading1)
(section2 (sec_heading2))))
